# ARBORS

./: .gitignore  LICENSE  README.md  optimizations.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py
src/arbors/: maxdepthtwo_utils.py  tree_compare.py  utils.py
src/tree_comparison/: convexsimfunc_utils.py  tree_compare.py  utils.py
tests/: test_tree_compare.py
tree_comparison/: convexsimfunc_utils.py  maxdepthtwo_utils.py  reporting_utils.py  run_tree_compare.py  run_tree_compare_local.py  test_tree_compare.py  tree_compare.py  utils.py
tree_comparison/TestData/: Test_Morph_2_50x.swc  Test_Morph_4_50x.swc
tree_comparison/TestTrees/: 1069537949.swc  1080362151.swc  Test_Morph_2_50x_cp.swc  Test_Morph_4_50x.swc  test_tree_viz.ipynb  tree1.swc  tree2.swc
tree_comparison/archive/: test_tree_compare.py
tree_comparison/convex_matching/: setup.py
tree_comparison/data/: _0.mat  _0_0.mat  _0_0_0.mat  _0_0_0_0.mat  _0_0_0_0_0.mat  _0_0_0_0_2.mat  _0_0_0_0_3.mat  _0_0_0_0_4.mat  _0_0_0_2.mat  _0_0_0_2_0.mat  _0_0_0_2_2.mat  _0_0_0_2_3.mat  _0_0_0_2_4.mat  _0_0_0_3.mat  _0_0_0_3_0.mat  _0_0_0_3_2.mat  _0_0_0_3_3.mat  _0_0_0_3_4.mat  _0_0_0_4.mat  _0_0_0_4_0.mat  _0_0_0_4_2.mat  _0_0_0_4_3.mat  _0_0_0_4_4.mat  _0_0_2.mat  _0_0_2_0.mat  _0_0_2_0_0.mat  _0_0_2_0_2.mat  _0_0_2_0_3.mat  _0_0_2_0_4.mat  _0_0_2_2.mat  _0_0_2_2_0.mat  _0_0_2_2_2.mat  _0_0_2_2_3.mat  _0_0_2_2_4.mat  _0_0_2_3.mat  _0_0_2_3_0.mat  _0_0_2_3_2.mat  _0_0_2_3_3.mat  _0_0_2_3_4.mat  (+1148 more)
tree_comparison/forest/: run_tree_compare.py  run_tree_compare_local.py  setup.cfg  slurmDAG.py
(+11 files in other folders)
