[metadata]
name = tree_comparison
version = attr: tree_comparison.__version__

[options]
packages = find:
python_requires = >=3.9

[options.entry_points]
console_scripts =
    run-tree-comparison = tree_comparison.run_tree_compare:console_script
    run-tree-comparison-local = tree_comparison.run_tree_compare_local:console_script
    tree-comparison = tree_comparison.tree_compare:console_script
    tree-comparison-test = tree_comparison.test_tree_compare:console_script
